--- a/core/state_management/templates/edge_devices/recordings.html
+++ b/core/state_management/templates/edge_devices/recordings.html
@@ -88,7 +88,7 @@
                     </td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                         {% if recording.created_at %}
-                            {{ recording.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
+                            {{ recording.created_at | to_taipei_tz('%Y-%m-%d %H:%M:%S') }}
                         {% else %}
                             -
                         {% endif %}
