--- a/core/state_management/templates/base.html
+++ b/core/state_management/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Sound Multi Analysis System - 狀態管理與監控中心">
     <meta name="author" content="Sound Multi Analysis System">
     <meta name="theme-color" content="#4f46e5">
-    <title>{% block title %}State Management{% endblock %} - 狀態管理系統</title>
+    <title>{% block title %}State Management{% endblock %} - {{ app_title }}</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
@@ -147,7 +147,7 @@
                         <div class="flex h-16 shrink-0 items-center">
                             <h1 class="text-white text-xl font-bold flex items-center gap-2">
                                 <i class="fas fa-database"></i>
-                                狀態管理
+                                {{ app_title }}
                             </h1>
                         </div>
                         {% include 'partials/sidebar_nav.html' %}
@@ -162,7 +162,7 @@
                 <div class="flex h-16 shrink-0 items-center">
                     <h1 class="text-white text-xl font-bold flex items-center gap-2">
                         <i class="fas fa-database"></i>
-                        狀態管理
+                        {{ app_title }}
                     </h1>
                 </div>
                 {% include 'partials/sidebar_nav.html' %}
